Update `pom.xml`: modify Surefire plugin configuration to include unit tests under `logger/api` package.
Signed-off-by: sinri <e.joshua.s.e@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
                 <version>${mavenSurefirePluginVersion}</version>
                 <configuration>
                     <includes>
-                        <include>io/github/sinri/keel/test/unittest/**/*Test.java</include>
+                        <include>io/github/sinri/keel/logger/api/**/*UnitTest.java</include>
                     </includes>
                 </configuration>
             </plugin>
