--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
+### Maven ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+### Gradle ###
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### Kotlin ###
 .kotlin
 
 ### IntelliJ IDEA ###
@@ -28,9 +38,6 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
@@ -40,3 +47,5 @@ build/
 
 .idea
 config.properties
+
+/pom.xml.deprecated
