build: update Gradle dependency versions, refactor repository configuration, and remove outdated docs
- Update `jspecifyVersion` to `1.0.0` and `vertxVersion` to `5.0.6` in `gradle.properties`
- Refactor dependency management in `build.gradle.kts` to use version variables
- Simplify repository configuration, removing redundant or unused credentials and tasks
- Remove outdated `design.md` and `usage.md` documentation files

Signed-off-by: sinri <e.joshua.s.e@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,7 @@ developerOrganizationUrl=https://sinri.github.io
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m
 org.gradle.parallel=true
 org.gradle.caching=true
+# Denpendency Version
+jspecifyVersion=1.0.0
+vertxVersion=5.0.6
 
