--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Project Properties
 group=io.github.sinri
-version=5.0.0-SNAPSHOT
-#version=5.0.0-rc.21
+#version=5.0.0-SNAPSHOT
+version=5.0.0-rc.22
 # Project Metadata
 projectName=Keel-Logger-API
 projectDescription=The API for logging in Keel and others.
