--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,10 @@ developerOrganizationUrl=https://sinri.github.io
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m
 org.gradle.parallel=true
 org.gradle.caching=true
+# GPG Signing Configuration
+signing.gnupg.keyName=e.joshua.s.e@gmail.com
+signing.gnupg.executable=gpg
+signing.gnupg.useLegacyGpg=false
 # Denpendency Version
 jspecifyVersion=1.0.0
 vertxVersion=5.0.6
